Fix py error (#3126)
* update

* update

* update

* update

* update